--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "homepage": "https://github.com/misbahkhalilaz/chat-room-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.16",
     "dotenv-cli": "^6.0.0",
     "nodemon": "^2.0.20",
