feat: db URI for testing purpose

--- a/environments/.dev.env
+++ b/environments/.dev.env
@@ -1,3 +1,4 @@
 PORT=4000
+MONGO_DB_URI=mongodb+srv://chatroomapp:2r4oqf8SNSYYsGiC@cluster0.tf11ohp.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ChatRoomApp
 JWT_SECRET=MC43MjU4OTY0ODU4NTgyMjY2
